test_suite/extensions/invalid/syntaxErr/switch/switchiErr.wacc
# switch typo

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
    int i = 10;
    switchi i
    do 
        case 5:
            println 5
        case 10:
            println 10
        default:
            println "default"
    done
end
